TEIID-849 fix for resolving subqueries in stored procedure parameters and for using the appropriate context information.